--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>李宇航的博客</title>
-<!-- 文本编辑器 -->
-    <link rel="stylesheet" type="text/css" href="static/css/built-editor.css"/>
-        <!-- 鼠标点击出现心的js -->
+    <!-- 鼠标点击出现心的js -->
     <script src="static/js/clicklove.js"></script>
+    <!-- 富文本编辑 -->
+    <script src="static/js/vue-html5-editor.js"></script>
+    <link href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
    
 
   </head>
@@ -21,11 +22,11 @@
   <script color="255,0,255" opacity="0.7" zindex="-1" count="140" src="static/js/canvas-nest.min.js"></script>
 
   <!-- 看板娘 -->
-  <!-- <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.min.js">
-  </script> -->
-  <!-- <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.0.min.js">
-  </script> -->
-  <!-- <script type="text/javascript">
+  <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.min.js">
+  </script> 
+  <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.0.min.js">
+  </script> 
+  <script type="text/javascript">
       L2Dwidget.init({
           "display": {
               "superSample": 2,
@@ -36,13 +37,5 @@
               "vOffset": 0
           }
       });
-  </script> -->
-   <!-- 文本编辑器 -->
-   <script src="/static/js/built-editor.min.js"></script>
-    <script>
-      require(["orion/editor/edit"], function(edit) {
-        edit({className: "editor"});
-      });
-    </script>
-
+  </script>
   </html>
