--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <!-- 富文本编辑 -->
     <script src="static/js/vue-html5-editor.js"></script>
     <link href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-   
-
+   <!-- wow效果 -->
+   <link href="static/css/animate.css" rel="stylesheet">
+   <script src="static/js/wow.js"></script>
+   <script>
+      new WOW().init();
+   </script>
   </head>
   <body>
     <div id="app"></div>
@@ -19,10 +23,10 @@
   <!-- 鼠标点击更改背景的js -->
   <script id="ribbon" size="300" alpha="0.1" zindex="-1" src="static/js/canvas-ribbon.js"></script>
    <!-- 鼠标滑动页面玩法 -->
-  <script color="255,0,255" opacity="0.7" zindex="-1" count="140" src="static/js/canvas-nest.min.js"></script>
+  <!-- <script color="255,0,255" opacity="0.7" zindex="-1" count="140" src="static/js/canvas-nest.min.js"></script> -->
 
   <!-- 看板娘 -->
-  <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.min.js">
+   <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.min.js">
   </script> 
   <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.0.min.js">
   </script> 
@@ -37,5 +41,5 @@
               "vOffset": 0
           }
       });
-  </script>
+  </script> 
   </html>
