--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="static/js/clicklove.js"></script>
     <!-- 富文本编辑 -->
     <script src="static/js/vue-html5-editor.js"></script>
-    <link href="https://cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="static/css/font-awesome.min.css" rel="stylesheet">
    <!-- wow效果 -->
    <link href="static/css/animate.css" rel="stylesheet">
    <script src="static/js/wow.js"></script>
