--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <!-- 鼠标滑动页面玩法 -->
   <!-- <script color="255,0,255" opacity="0.7" zindex="-1" count="140" src="static/js/canvas-nest.min.js"></script> -->
 
-  <!-- 看板娘1 -->
+  <!-- 看板娘 -->
    <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.min.js">
   </script> 
   <script type="text/javascript" charset="utf-8" src="static/js/L2Dwidget.0.min.js">
