--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Mr.li</title>
+    <title>逆水行舟,不进则退</title>
     <!-- 鼠标点击出现心的js -->
     <script src="static/js/clicklove.js"></script>
     <!-- 富文本编辑 -->
     <link href="static/css/font-awesome.min.css" rel="stylesheet"> 
+    <!-- icon -->
+    <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="app"></div>
