--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- 鼠标点击更改背景的js -->
   <script id="ribbon" size="300" alpha="0.1" zindex="-1" src="static/js/canvas-ribbon.js"></script>
    <!-- 鼠标滑动页面玩法 -->
-  <script color="255,0,255" opacity="0.7" zindex="-1" count="140" src="static/js/canvas-nest.min.js"></script> 
+  <!-- <script color="255,0,255" opacity="0.7" zindex="-1" count="140" src="static/js/canvas-nest.min.js"></script>  -->
 
   <!-- 看板娘 -->
   <script>
