--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>逆水行舟,不进则退</title>
     <!-- 鼠标点击出现心的js -->
-    <script src="static/js/clicklove.js"></script>
+    <script src="/static/js/clicklove.js"></script>
     <!-- 富文本编辑 -->
-    <link href="static/css/font-awesome.min.css" rel="stylesheet"> 
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet"> 
     <!-- icon -->
-    <link rel="shortcut icon" href="static/images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/static/images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="app"></div>
       
   </body>
   <!-- 鼠标点击更改背景的js -->
-  <script id="ribbon" size="300" alpha="0.1" zindex="-1" src="static/js/canvas-ribbon.js"></script>
+  <script id="ribbon" size="300" alpha="0.1" zindex="-1" src="/static/js/canvas-ribbon.js"></script>
    <!-- 鼠标滑动页面玩法 -->
-  <!-- <script color="255,0,255" opacity="0.7" zindex="-1" count="140" src="static/js/canvas-nest.min.js"></script>  -->
+  <!-- <script color="255,0,255" opacity="0.7" zindex="-1" count="140" src="/static/js/canvas-nest.min.js"></script>  -->
 
   <!-- 看板娘 -->
   <script>
