--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     ]).then(() => {
       initWidget({
         waifuPath: live2d_path + "waifu-tips.json",
-        apiPath: "https://live2d.fghrsh.net/api/",
+         apiPath: "https://live2d.fghrsh.net/api/",
+        // apiPath: "http://localhost:8011/",
         //cdnPath: "https://cdn.jsdelivr.net/gh/fghrsh/live2d_api/"
       });
     });
